# RaftCLI

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  ideas.md
.github/workflows/: app_release.yml
dev_tests/: analyze_log_timestamps.py
docs/: native_terminal_design.md  serial_monitor_v2_design.md
raft_templates/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  compose.yaml
raft_templates/components/{{user_sys_mod_name}}/: CMakeLists.txt  {{user_sys_mod_class}}.cpp  {{user_sys_mod_class}}.h
raft_templates/main/: CMakeLists.txt  main.cpp
raft_templates/systypes/Common/: features.cmake
raft_templates/systypes/Common/FSImage/: index.html
raft_templates/systypes/{{sys_type_name}}/: SysTypes.json  features.cmake  partitions.csv  sdkconfig.defaults
scripts/: find_git_changes.py
src/: app_build.rs  app_config.rs  app_debug_remote.rs  app_flash-orig.rs  app_flash.rs  app_flash2.rs  app_flash3.rs  app_flash4.rs  app_flash5.rs  app_flash6.rs  app_libs.rs  app_new.rs  app_ota.rs  app_ports.rs  cmd_history.rs  console_log.rs  flat_key_values.rs  line_editor.rs  main.rs  native_terminal.rs  raft_cli_utils.rs  serial_monitor.rs  serial_monitor_v2.rs  serial_rx_handler.rs  systype_config.rs  target_settings.rs  terminal_io.rs  time_tracker.rs
test_scripts/: TestRemoteDebugServer.py
