[package]
name = "raftcli"
version = "1.0.16"
authors = ["Rob Dobson <rob@dobson.com>"]
license = "MIT"
keywords = ["cli", "esp32", "espressif", "raft", "framework"]
categories = ["command-line-utilities"]
description = "Command line interface for raft framework and serial monitoring"
homepage = "https://github.com/robdobsn/RaftCLI"
documentation = "https://github.com/robdobsn/RaftCLI"
repository = "https://github.com/robdobsn/RaftCLI"
readme = "README.md"
edition = "2021"

[[bin]]
name = "raft"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
include_dir = "0.7.3"
handlebars = "5.1.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
dialoguer = "0.10"
regex = "1.10.3"
tokio = { version = "1.36.0", features = ["full"] }
tokio-serial = "5.4.4"
tokio-util = { version = "0.7.10", features = ["codec"] }
crossterm = "0.27.0"
bytes = "1.5.0"
futures = "0.3.21"
remove_dir_all = "0.8.2"
chrono = "0.4.33"
crossbeam = "0.8.4"
