[package]
name = "raftcli"
version = "1.7.6"
authors = ["Rob Dobson <rob@dobson.com>"]
license = "MIT"
keywords = ["cli", "esp32", "espressif", "raft", "framework"]
categories = ["command-line-utilities"]
description = "Command line interface for raft framework and serial monitoring"
homepage = "https://github.com/robdobsn/RaftCLI"
documentation = "https://github.com/robdobsn/RaftCLI"
repository = "https://github.com/robdobsn/RaftCLI"
readme = "README.md"
edition = "2021"

[[bin]]
name = "raft"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
pkg-config = "0.3"

[dependencies]
serialport-fix-stop-bits = "4.3.0"
clap = { version = "4.4.18", features = ["derive"] }
include_dir = "0.7.3"
handlebars = "6.3.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
dialoguer = "0.11"
regex = "1.10.3"
crossterm = "0.28.1"
bytes = "1.5.0"
remove_dir_all = "1.0.0"
chrono = "0.4.33"
crossbeam = "0.8.4"
wildmatch = "2.3.4"
which = "7.0.2"
evalexpr = "12.0.2"
dirs = "6.0.0"
